--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -31,6 +31,7 @@ jobs:
   deploy-pr:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: pr
       url: ${{ steps.deploy.outputs.url }}
@@ -48,6 +49,7 @@ jobs:
   deploy-production:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: dev
       url: ${{ steps.deploy.outputs.url }}
