--- a/.github/workflows/azure-static-web-app-advanced.yml
+++ b/.github/workflows/azure-static-web-app-advanced.yml
@@ -32,11 +32,15 @@ jobs:
       # todo: do i need to parse branch name for pr's to remove any special chars?
 
   deploy:
+    if: github.event.action != 'closed'
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.head_ref) || 'production' }}
       url: ${{ steps.deploy.outputs.url }}
+    concurrency:
+      group: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.head_ref) || 'production' }}
+      cancel-in-progress: false
     steps:
       - name: download build artifact
         uses: actions/download-artifact@v3
